--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "tsc && node ./build/index.js",
-    "dev": "nodemon ./src/index.ts",
+    "build": "tsc",
+    "dev": "npm run build && nodemon ./build/index.js",
     "prod": "",
     "docker:up": "",
     "docker:down": ""
@@ -23,8 +23,18 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@types/module-alias": "^2.0.4",
+    "module-alias": "^2.2.3",
     "nodemon": "^3.1.0",
-    "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
+  },
+  "_moduleAliases": {
+    "@interfaces": "build/interfaces",
+    "@controllers": "build/controllers",
+    "@models": "build/models",
+    "@repositories": "build/repositories",
+    "@routes": "build/routes",
+    "@services": "build/services",
+    "@utils": "build/utils"
   }
 }
