--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "dev": "npm run build && nodemon ./build/index.js",
-    "prod": "",
+    "dev": "export NODE_ENV=development && npm run build && nodemon ./build/index.js",
+    "prod": "export NODE_ENV=production && npm run build && node ./build/index.js",
     "docker:up": "",
     "docker:down": ""
   },
@@ -14,12 +14,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/config": "^3.3.4",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
+    "config": "^3.3.11",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "mongoose": "^8.4.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
