--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,5 @@
 node_modules/
 build/
-.env
 roadmap.txt
 
 # dont include everything except example.json
@@ -8,3 +7,4 @@ config/*
 !config/example.js
 
 env/*
+!env/.env.development
