--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,2 +1,16 @@
 # mongo local
 # reddis local
+version: '3.8'
+services:
+  api:
+    build: ./API
+    ports:
+      - "4000:4000"
+  frontcrud:
+    build: ./FrontCrud/peliculasFront
+    ports:
+      - "5173:5173"
+  frontget:
+    build: ./FrontGet/peliculasFrontGet
+    ports:
+      - "5172:5172"
