--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "dev": "export NODE_ENV=development && npm run build && nodemon ./build/index.js",
-    "prod": "export NODE_ENV=production && npm run build && node ./build/index.js",
+    "dev": "npm run build && cross-env NODE_ENV=development nodemon ./build/index.js",
+    "prod": "npm run build && cross-env NODE_ENV=production node ./build/index.js",
     "docker:up": "",
     "docker:down": ""
   },
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@types/module-alias": "^2.0.4",
+    "cross-env": "^7.0.3",
     "module-alias": "^2.2.3",
     "nodemon": "^3.1.0",
     "typescript": "^5.4.5"
