--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
+    "bcrypt": "^5.1.1",
     "config": "^3.3.11",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -26,6 +27,7 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/module-alias": "^2.0.4",
     "cross-env": "^7.0.3",
     "module-alias": "^2.2.3",
